# agent-openai-java-banking-assistant

./: .gitignore  AGENTS.md  CODEOWNERS  README.md  SECURITY.md  WIDGET_IMPLEMENTATION.md  azure.yaml  workspace.xml
app/backend/: .env.dev.example  Dockerfile  README.md  applicationinsights.json  pom.xml  pyproject.toml  uv.lock.1.0.0b251016  uv.lock.1.0.0b251114
app/backend/app/: logging-default.yaml  main_agents_as_tools.py  main_chatkit_server.py  main_dev-ui.py  main_handoff.py
app/backend/app/agents/azure_chat/: account_agent.py
app/backend/app/agents/azure_chat/agents_as_tools/: supervisor_agent.py
app/backend/app/agents/azure_chat/handoff/: handoff_orchestrator.py
app/backend/app/agents/azure_chat/handoff/chatkit/: _chatkit_events_handler.py  account_agent_chatkit.py  handoff_orchestrator_chatkit.py  payment_agent_chatkit.py  transaction_agent_chatkit.py
app/backend/app/agents/azure_chat/handoff/chatkit/tmp/handoff_checkpoints/: 0f29b462-e351-4642-ad24-7f239f90bb30.json  0f73a7c9-d80b-4c0f-953a-b31818aa8db4.json  13700dff-2fef-4597-933a-5852ec786295.json  15cad0c8-8bbb-49f0-9de9-f82d18901516.json  205a1d9a-ad15-4cb6-a856-3ed85cd8cb7f.json  2398ca3c-7919-48ef-9675-5388e48e18c6.json  29163d04-5e7b-44cf-a7c6-5366640d91c2.json  2e93be95-87fb-40ff-8646-410d2576a678.json  30e6632f-40f0-4262-98c2-b55f4baf600b.json  32679258-b769-43aa-940d-4f1f9b5ec397.json  5245319a-bbce-4deb-825c-db4d99563e66.json  57e405ec-4b41-4315-84de-b244a62c2441.json  5ad9a724-1d87-4803-972c-fcbe2682afde.json  62e5181a-9999-431a-94e7-8687cfd6df79.json  650dd7a5-dac4-455a-afb5-1e952c2881b4.json  6a53cfea-2d62-45d2-a5f9-39c3bb1eac97.json.tmp  6dee1362-70fc-4a20-b4e8-ca5d2d60b016.json.tmp  7571f2e4-dade-45d9-9ccc-e7e8188d4c00.json.tmp  7883e2a6-434b-46ac-9a22-ae2020fba495.json  8c063cf4-6ab1-4b84-8dff-1ebe77fb81a2.json  c0a317be-3c31-4204-b1fc-2eb441814270.json  c35b9fec-a1ad-4e98-96e8-db8cdab361d4.json  c4bf60b1-1a64-4c51-94c4-545faf3fe616.json  c6bc1765-dcbd-40b7-859a-3479ed91bad5.json  c77d9107-3bd0-4663-9a78-c36a2af4ccbf.json  ca09ec1e-fa42-4828-b220-b11c20869231.json  cab11b4b-e4c6-412f-a91e-9a45cfeaa4c1.json.tmp  cb39ad13-3ca8-47a7-bed0-8010d3bb8815.json  d3b2389c-5754-407d-9441-4684db2b3ece.json  d75e5cfb-2a8e-4e27-8743-2de85054abb6.json  db9e51d0-17ea-4ca6-8bb4-a4a4dd6b294b.json  dfe61f0a-1eee-4f29-8b00-143d4f640d19.json.tmp  e2ba82ce-113e-4c6b-81a3-14f5e4733c65.json  e97ea1ac-a2a8-41a7-8c6c-6cb9c9678440.json  f392cfdf-dd84-43b7-92c0-bced5f107453.json.tmp  f3abd994-9197-4f55-b1df-a84739d5fba0.json  f583046e-1dc6-4163-aef7-d42865c5d1c8.json  f732740f-3a86-452d-97ca-05041a81fce4.json  f7706385-341d-4f4b-a354-fa19a465d15d.json
app/backend/app/agents/foundry/: payment_agent_foundry.py  transaction_agent_foundry.py
app/backend/app/common/chatkit/: types.py  widgets.py
app/backend/app/config/: azure_credential.py  container_azure_chat.py  container_foundry.py  logging.py  settings.py
app/backend/app/helpers/: blob_proxy.py  document_intelligence_scanner.py
app/backend/app/routers/: chat_routers_agents_as_tools.py  chat_routers_handoff.py
app/backend/app/routers/chatkit/: attachement_store.py  attachment_routers.py  chat_routers.py  chatkit_routers.py  chatkit_server.py  memory_store.py  sqllite_store.py
app/backend/src/main/resources/: application.properties
app/business-api/python/transaction/: logging_config.py  main.py  mcp_tools.py  models.py  pyproject.toml  routers.py  services.py
app/copilot/: .env.dev  .env.dev.example  Dockerfile  README.md  applicationinsights.json  pom.xml  pyproject.toml  requirements.txt  uv.lock.1.0.0b251001  uv.lock.230cb083cee26c3a90e4a18de42589a855063e85  uv.lock.a1b0a28f9cdd57f83e6c7258dc6df349c5d6bc1b
app/copilot/app/: logging-default.yaml  main.py  main_dev-ui.py
app/copilot/app/agents/: account_agent.py  payment_agent.py  supervisor_agent.py  transactions_agent.py  triage_agent.py
app/copilot/app/agents/azure_chat/: account_agent.py  payment_agent.py  supervisor_agent.py  transaction_agent.py
app/copilot/app/agents/azure_chat/handoff/: handoff_orchestrator.py
app/copilot/app/agents/foundry/: account_agent_foundry.py  payment_agent_foundry.py  supervisor_agent_foundry.py  transaction_agent_foundry.py
app/copilot/app/api/: agent_astool_orchestration.py  agent_astool_orchestration.py.ignore  agent_handoff_orchestration.py  auth_routers.py  chat_routers.py  content_routers.py
app/copilot/app/config/: azure_credential.py  container.py  container_azure_chat.py  container_foundry.py  logging.py  observability.py  settings.py
app/copilot/app/helpers/: document_intelligence_scanner.py
app/copilot/app/models/: chat.py  user.py
app/copilot/copilot-backend/: pom.xml
app/copilot/copilot-backend/manifests/: azd-env-configmap.yml
app/copilot/copilot-backend/src/main/resources/: account.yaml  application.properties  payments.yaml
app/copilot/copilot-common/: pom.xml
app/copilot/langchain4j-agents/: pom.xml
app/copilot/langchain4j-agents/src/main/resources/prompts/: account-agent-prompt.txt  payment-agent-prompt.txt  supervisor-agent-prompt.txt  supervisor-context-prompt.txt  transaction-history-agent-prompt.txt
app/copilot/langchain4j-agents/src/test/resources/: logback.xml
app/copilot/semantickernel-openapi-plugin/: pom.xml
app/copilot/springai-agents/: pom.xml
app/copilot/springai-agents/src/test/resources/: logback.xml  transaction-history.yaml
(+423 files in other folders)
